team-app/main/default/objects/Waterfall_Actual__c/Waterfall_Actual__c.object-meta.xml
<CustomObject>
    <description>Nightly snapshot of what each AE actually did this period, including the Salesloft activity layer.</description>
    <label>Waterfall Actual</label>
    <nameField>
        <displayFormat>WFA-{000000}</displayFormat>
        <label>Actual Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Waterfall Actuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>