team-app/main/default/objects/Waterfall_Actual__c/fields/Activity_Data_Complete__c.field-meta.xml
<CustomField>
    <fullName>Activity_Data_Complete__c</fullName>
    <description>Dispositioned Call tasks / all completed Call tasks this period.</description>
    <inlineHelpText>Dispositioned Call tasks / all completed Call tasks this period.</inlineHelpText>
    <label>Activity Data Complete</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>