team-app/main/default/objects/Waterfall_Actual__c/fields/AE__c.field-meta.xml
<CustomField>
    <fullName>AE__c</fullName>
    <description>Opportunity owner this actuals row belongs to.</description>
    <inlineHelpText>Opportunity owner this actuals row belongs to.</inlineHelpText>
    <label>AE</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipName>Waterfall_Actuals</relationshipName>
    <type>Lookup</type>
</CustomField>