team-app/main/default/objects/Waterfall_Actual__c/fields/Connects__c.field-meta.xml
<CustomField>
    <fullName>Connects__c</fullName>
    <description>Dispositioned Call tasks whose SalesLoft1__Call_Disposition__c is Connected.</description>
    <inlineHelpText>Dispositioned Call tasks whose SalesLoft1__Call_Disposition__c is Connected.</inlineHelpText>
    <label>Connects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>