team-app/main/default/objects/Waterfall_Actual__c/fields/Created_Count__c.field-meta.xml
<CustomField>
    <fullName>Created_Count__c</fullName>
    <description>New-business opportunities created in this period (CreatedDate).</description>
    <inlineHelpText>New-business opportunities created in this period (CreatedDate).</inlineHelpText>
    <label>Created Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>