team-app/main/default/objects/Waterfall_Actual__c/fields/Dials__c.field-meta.xml
<CustomField>
    <fullName>Dials__c</fullName>
    <description>Completed Call tasks with a Salesloft disposition. Undispositioned calls are not dials.</description>
    <inlineHelpText>Completed Call tasks with a Salesloft disposition. Undispositioned calls are not dials.</inlineHelpText>
    <label>Dials</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>