team-app/main/default/objects/Waterfall_Actual__c/fields/Emails_Sent__c.field-meta.xml
<CustomField>
    <fullName>Emails_Sent__c</fullName>
    <description>Completed Email tasks with Auto_Reply__c false.</description>
    <inlineHelpText>Completed Email tasks with Auto_Reply__c false.</inlineHelpText>
    <label>Emails Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>