team-app/main/default/objects/Waterfall_Actual__c/fields/Meetings_Held__c.field-meta.xml
<CustomField>
    <fullName>Meetings_Held__c</fullName>
    <description>Events whose StartDateTime is in the past inside this period.</description>
    <inlineHelpText>Events whose StartDateTime is in the past inside this period.</inlineHelpText>
    <label>Meetings Held</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>