team-app/main/default/objects/Waterfall_Actual__c/fields/Open_Qualified_Arr__c.field-meta.xml
<CustomField>
    <fullName>Open_Qualified_Arr__c</fullName>
    <description>ARR on those open qualified deals. Number, not Currency.</description>
    <inlineHelpText>ARR on those open qualified deals. Number, not Currency.</inlineHelpText>
    <label>Open Qualified ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>