team-app/main/default/objects/Waterfall_Actual__c/fields/Open_Qualified_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Qualified_Count__c</fullName>
    <description>Open SQL-stamped new-business deals with CloseDate in this period. Close-plan Have.</description>
    <inlineHelpText>Open SQL-stamped new-business deals with CloseDate in this period. Close-plan Have.</inlineHelpText>
    <label>Open Qualified Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>