team-app/main/default/objects/Waterfall_Actual__c/fields/Period_End__c.field-meta.xml
<CustomField>
    <fullName>Period_End__c</fullName>
    <description>Last day of the actuals period.</description>
    <inlineHelpText>Last day of the actuals period.</inlineHelpText>
    <label>Period End</label>
    <type>Date</type>
</CustomField>