team-app/main/default/objects/Waterfall_Actual__c/fields/Period_Label__c.field-meta.xml
<CustomField>
    <fullName>Period_Label__c</fullName>
    <description>Human quarter label such as Q3 2026.</description>
    <inlineHelpText>Human quarter label such as Q3 2026.</inlineHelpText>
    <label>Period Label</label>
    <length>20</length>
    <type>Text</type>
</CustomField>