team-app/main/default/objects/Waterfall_Actual__c/fields/Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Period_Start__c</fullName>
    <description>First day of the actuals period (calendar quarter).</description>
    <inlineHelpText>First day of the actuals period (calendar quarter).</inlineHelpText>
    <label>Period Start</label>
    <type>Date</type>
</CustomField>