team-app/main/default/objects/Waterfall_Actual__c/fields/Quota_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quota_Amount__c</fullName>
    <description>Sum of Sales_Plan__c.Quota_Amount__c for this AE and period. Number, not Currency.</description>
    <inlineHelpText>Sum of Sales_Plan__c.Quota_Amount__c for this AE and period. Number, not Currency.</inlineHelpText>
    <label>Quota Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>