team-app/main/default/objects/Waterfall_Actual__c/fields/Replies__c.field-meta.xml
<CustomField>
    <fullName>Replies__c</fullName>
    <description>Inbound EmailMessage rows. Thread traffic, not a cold reply rate.</description>
    <inlineHelpText>Inbound EmailMessage rows. Thread traffic, not a cold reply rate.</inlineHelpText>
    <label>Replies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>