team-app/main/default/objects/Waterfall_Actual__c/fields/Self_Sourced_Created__c.field-meta.xml
<CustomField>
    <fullName>Self_Sourced_Created__c</fullName>
    <description>Created opportunities whose Primary_Team_Source__c is AE Outbound or AM.</description>
    <inlineHelpText>Created opportunities whose Primary_Team_Source__c is AE Outbound or AM.</inlineHelpText>
    <label>Self Sourced Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>