team-app/main/default/objects/Waterfall_Actual__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <description>EUNA_Solution__c for a product-family row. Blank means AE blended across the four families.</description>
    <inlineHelpText>EUNA_Solution__c for a product-family row. Blank means AE blended across the four families.</inlineHelpText>
    <label>Solution</label>
    <length>80</length>
    <type>Text</type>
</CustomField>